--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,11 @@
 {
 	"tabWidth": 4,
-	"useTabs": true
-}
+	"useTabs": true,
+	"printWidth": 100,
+	"semi": true,
+	"singleQuote": false,
+	"trailingComma": "es5",
+	"bracketSpacing": true,
+	"arrowParens": "always",
+	"endOfLine": "auto"
+} 
