--- a/package.json
+++ b/package.json
@@ -7,25 +7,26 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
-		"format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\""
+		"format": "prettier --write ."
 	},
 	"dependencies": {
 		"lucide-react": "^0.298.0",
 		"next": "^14.0.4",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"tailwind": "^2.3.1"
 	},
 	"devDependencies": {
 		"@types/node": "^20.10.4",
 		"@types/react": "^18.2.42",
 		"@types/react-dom": "^18.2.17",
+		"@types/uuid": "^10.0.0",
 		"autoprefixer": "^10.4.16",
 		"eslint": "^8.55.0",
 		"eslint-config-next": "14.0.4",
 		"postcss": "^8.4.32",
 		"prettier": "^3.5.3",
-		"tailwindcss": "^3.3.6",
+		"tailwindcss": "^3.4.17",
 		"typescript": "^5.3.3"
 	}
 }
