--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"axios": "^1.8.4",
 		"lucide-react": "^0.298.0",
 		"next": "^14.0.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"socket.io-client": "^4.8.1",
+		"sonner": "^2.0.3",
 		"tailwind": "^2.3.1"
 	},
 	"devDependencies": {
